# AI-bench

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: kernel_bench.yml  lint.yml  test.yml
ai_bench/: __init__.py  cli.py
ai_bench/harness/core/: __init__.py  specs.py
ai_bench/harness/runner/: __init__.py  benchmark_compare.py  kernel_bench_runner.py
ai_bench/harness/sycl/: __init__.py
ai_bench/harness/testing/: __init__.py  timer.py
ai_bench/tests/: test_backend.py
ai_bench/utils/: __init__.py  finder.py  flop_counter.py  logger.py  memory_counter.py  sweep.py
backends/triton/KernelBench/level1/: 16_Matmul_with_transposed_A.py  gemm.py
backends/triton/KernelBench/level2/: 81_Gemm_Swish_Divide_Clamp_Tanh_Clamp.py  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.py
infra/scripts/: ci-xpu-run-kernel-bench.sh  compare.py  run_kernel_bench.py
problems/specs/KernelBench/level1/: 10_3D_tensor_matrix_multiplication.yaml  11_4D_tensor_matrix_multiplication.yaml  12_Matmul_with_diagonal_matrices_.yaml  17_Matmul_with_transposed_B.yaml  18_Matmul_with_transposed_both.yaml  19_ReLU.yaml  1_Square_matrix_multiplication_.yaml  20_LeakyReLU.yaml  2_Standard_matrix_multiplication_.yaml  4_Matrix_vector_multiplication_.yaml  5_Matrix_scalar_multiplication.yaml  6_Matmul_with_large_K_dimension_.yaml  7_Matmul_with_small_K_dimension_.yaml  8_Matmul_with_irregular_shapes_.yaml  9_Tall_skinny_matrix_multiplication_.yaml  gemm.yaml
problems/specs/KernelBench/level2/: 12_Gemm_Multiply_LeakyReLU.yaml  14_Gemm_Divide_Sum_Scaling.yaml  1_Conv2D_ReLU_BiasAdd.yaml  85_Conv2d_GroupNorm_Scale_MaxPool_Clamp.yaml  95_Matmul_Add_Swish_Tanh_GELU_Hardtanh.yaml  97_Matmul_BatchNorm_BiasAdd_Divide_Swish.yaml  98_Matmul_AvgPool_GELU_Scale_Max.yaml  9_Matmul_Subtract_Multiply_ReLU.yaml
problems/specs/KernelBench/level3/: 1_MLP.yaml  2_ShallowWideMLP.yaml  3_DeepNarrowMLP.yaml  43_MinGPTCausalAttention.yaml  4_LeNet5.yaml  5_AlexNet.yaml  6_GoogleNetInceptionModule.yaml  9_ResNet18.yaml
sweeps/level1/: level1.yaml
sweeps/level2/: level2.yaml
tests/: test_backend.py  test_finder.py  test_logging.py  test_sweep.py
